Fix low contrast on list summary
We manually specified a `$blue` color here which doesn't meet the minimum
contrast ratios for accessibility. Pull in our `link` class to get our usual
darker blue and the black focus state.

--- a/app/webpacker/styles/teaching-events.scss
+++ b/app/webpacker/styles/teaching-events.scss
@@ -32,13 +32,9 @@ $icon-size: 3rem;
 
   &__descriptions {
     &--summary {
-      color: $blue;
+      @extend .link;
       cursor: pointer;
       text-decoration: underline;
-
-      &:hover {
-	      text-decoration: none;
-      }
 
       &::marker {
 	      padding-right: 2em;
